# aoc2020

./: .gitignore  LICENSE  aoc2020.cabal
app/: Main.hs
app/Misc/: Misc.hs
app/Solutions/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day15.hs  Day17.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
