cabal-version:       2.4

name:                aoc2020
version:             0.1.0.0
synopsis:            Solutions for Advent of Code 2020.
license:             MIT
license-file:        LICENSE
author:              Thomas Li
maintainer:          guslithd@student.gu.se
extra-source-files:  CHANGELOG.md

executable aoc2020
  main-is:             Main.hs
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude
                              , Relude.Extra
                              , Relude.Unsafe
                              )
  build-depends:       base ^>=4.12.0.0
                     , relude ^>= 0.7.0.0
                     , parseargs == 0.2.*
                     , text == 1.2.*
                     , containers == 0.6.*
                     , mtl == 2.2.*
                     , microlens-platform == 0.4.*
  hs-source-dirs:      app
  other-modules:       Misc.Misc
                     , Solutions.Day1
                     , Solutions.Day2
                     , Solutions.Day3
                     , Solutions.Day4
                     , Solutions.Day5
                     , Solutions.Day6
                     , Solutions.Day7
                     , Solutions.Day8
                     , Solutions.Day10
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wpartial-fields
  default-extensions:
      LambdaCase
    , InstanceSigs
    , OverloadedStrings
    , ScopedTypeVariables
    , TupleSections
    , TypeApplications
